--- a/app/views/library.html
+++ b/app/views/library.html
@@ -1,10 +1,4 @@
-<div class="text-center" ng-show="!check.reviewer">
-	<h3><strong>Nah.</strong></h3>
-
-	<p>It would seem that you aren't allowed to view the music library.</p>
-</div>
-
-<div class="panel panel-default" ng-show="check.reviewer">
+<div class="panel panel-default">
 	<div class="panel-heading">
 		<h3 class="panel-title">Music Library</h3>
 	</div>
@@ -12,28 +6,28 @@
 	<div class="panel-body">
 		<ul class="nav nav-pills nav-justified">
 			<li ng-class="{ 'active': rotationID === '0' }">
-				<a ui-sref="^.library({ rotationID: '0', page: 0 })">To Be Reviewed</a>
+				<a ui-sref="library({ rotationID: '0', page: 0 })">To Be Reviewed</a>
 			</li>
 			<li ng-class="{ 'active': rotationID === '7' }">
-				<a ui-sref="^.library({ rotationID: '7', page: 0 })">Recently Reviewed</a>
+				<a ui-sref="library({ rotationID: '7', page: 0 })">Recently Reviewed</a>
 			</li>
 			<li ng-class="{ 'active': rotationID === '1' }">
-				<a ui-sref="^.library({ rotationID: '1', page: 0 })">New</a>
+				<a ui-sref="library({ rotationID: '1', page: 0 })">New</a>
 			</li>
 			<li ng-class="{ 'active': rotationID === '2' }">
-				<a ui-sref="^.library({ rotationID: '2', page: 0 })">Heavy</a>
+				<a ui-sref="library({ rotationID: '2', page: 0 })">Heavy</a>
 			</li>
 			<li ng-class="{ 'active': rotationID === '3' }">
-				<a ui-sref="^.library({ rotationID: '3', page: 0 })">Medium</a>
+				<a ui-sref="library({ rotationID: '3', page: 0 })">Medium</a>
 			</li>
 			<li ng-class="{ 'active': rotationID === '4' }">
-				<a ui-sref="^.library({ rotationID: '4', page: 0 })">Light</a>
+				<a ui-sref="library({ rotationID: '4', page: 0 })">Light</a>
 			</li>
 			<li ng-class="{ 'active': rotationID === '5' }">
-				<a ui-sref="^.library({ rotationID: '5', page: 0 })">Optional</a>
+				<a ui-sref="library({ rotationID: '5', page: 0 })">Optional</a>
 			</li>
 			<li ng-class="{ 'active': rotationID === '6' }">
-				<a ui-sref="^.library({ rotationID: '6', page: 0 })">Jazz</a>
+				<a ui-sref="library({ rotationID: '6', page: 0 })">Jazz</a>
 			</li>
 		</ul>
 
@@ -74,7 +68,7 @@
 		<tbody>
 			<tr ng-repeat="a in albums">
 				<td>
-					<a ui-sref="^.library-album({ albumID: a.albumID })">{{a.album_code}}</a>
+					<a ui-sref="library-album({ albumID: a.albumID })">{{a.album_code}}</a>
 				</td>
 				<td>{{a.album_name}}</td>
 				<td>{{a.artist_name}}</td>
