--- a/app/views/library_album.html
+++ b/app/views/library_album.html
@@ -1,10 +1,4 @@
-<div class="text-center" ng-show="!check.reviewer">
-	<h3><strong>Nah.</strong></h3>
-
-	<p>It would seem that you aren't allowed to view the music library.</p>
-</div>
-
-<div class="panel panel-default" ng-show="check.reviewer">
+<div class="panel panel-default">
 	<div class="panel-heading">
 		<h3 class="panel-title">Album Info</h3>
 	</div>
@@ -67,7 +61,7 @@
 		</dl>
 
 		<div class="text-center">
-			<a class="btn btn-default" ui-sref="^.library">Done</a>
+			<a class="btn btn-default" ui-sref="library">Done</a>
 		</div>
 	</div>
 </div>
