--- a/app/views/logbook.html
+++ b/app/views/logbook.html
@@ -1,16 +1,4 @@
-<div class="text-center" ng-show="!check.reviewer">
-	<h3><strong>Nah.</strong></h3>
-
-	<p>It would seem that you aren't allowed to use the logbook.</p>
-</div>
-
-<div class="text-center" ng-show="check.reviewer && !show">
-	<h3><strong>Nah.</strong></h3>
-
-	<p>It would seem that you aren't in Studio A, so you can't use the logbook.</p>
-</div>
-
-<div class="panel panel-default" ng-show="check.reviewer && show">
+<div class="panel panel-default">
 	<div class="panel-heading">
 		<h3 class="panel-title">Logbook</h3>
 	</div>
