--- a/app/views/library.html
+++ b/app/views/library.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
 	<div class="panel-heading">
-		<h3 class="panel-title">Music Library</h3>
+		<h3 class="panel-title">Albums</h3>
 	</div>
 
 	<div class="panel-body">
