--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,27 +1,21 @@
-<div class="row">
-	<div class="col-sm-offset-3 col-sm-6">
-		<div class="page-header text-center">
-			<img src="images/logo.png"></img>
-		</div>
-
-		<div class="panel panel-default">
-			<form class="panel-body" name="form" novalidate>
-				<div class="form-group" ng-class="{'has-error': form.username.$touched && form.username.$invalid}">
-					<input class="form-control" type="text" name="username" ng-model="user.username" required maxlength="50" placeholder="Username" autofocus/>
-				</div>
-
-				<div class="form-group" ng-class="{'has-error': form.password.$touched && form.password.$invalid}">
-					<input class="form-control" type="password" name="password" ng-model="user.password" required maxlength="50" placeholder="Password"/>
-				</div>
-
-				<p class="text-center text-danger" ng-show="error">
-					<strong>{{error}}</strong>
-				</p>
-
-				<div class="text-center">
-					<button class="btn btn-default" ng-disabled="form.$invalid" ng-click="login(user)">Login</button>
-				</div>
-			</form>
-		</div>
-	</div>
+<div class="modal-header text-center">
+	<img src="images/logo.png" width="200"></img>
 </div>
+
+<form class="modal-body" name="form" novalidate>
+	<div class="form-group" ng-class="{'has-error': form.username.$touched && form.username.$invalid}">
+		<input class="form-control" type="text" name="username" ng-model="user.username" required maxlength="50" placeholder="Username" autofocus/>
+	</div>
+
+	<div class="form-group" ng-class="{'has-error': form.password.$touched && form.password.$invalid}">
+		<input class="form-control" type="password" name="password" ng-model="user.password" required maxlength="50" placeholder="Password"/>
+	</div>
+
+	<p class="text-center text-danger" ng-show="error">
+		<strong>{{error}}</strong>
+	</p>
+
+	<div class="text-center">
+		<button class="btn btn-default" ng-disabled="form.$invalid" ng-click="login(user)">Login</button>
+	</div>
+</form>
