--- a/app/views/library.html
+++ b/app/views/library.html
@@ -46,8 +46,9 @@
 			<th>Album</th>
 			<th>Artist</th>
 			<th ng-show="rotationID == 0">Genre</th>
-			<th ng-show="rotationID != 0">Reviewer</th>
-			<th ng-show="rotationID != 0">Review Date</th>
+			<th ng-show="rotationID == 1">Return Date</th>
+			<th ng-show="rotationID >= 2">Reviewer</th>
+			<th ng-show="rotationID >= 2">Review Date</th>
 		</thead>
 
 		<tbody>
@@ -58,8 +59,9 @@
 				<td>{{a.album_name}}</td>
 				<td>{{a.artist_name}}</td>
 				<td ng-show="rotationID == 0">{{general_genres[a.general_genreID].genre}}</td>
-				<td ng-show="rotationID != 0">{{a.reviewer}}</td>
-				<td ng-show="rotationID != 0">{{a.review_date | date:'yyyy-MM-dd'}}</td>
+				<td ng-show="rotationID == 1">{{a.expiration_date}}</td>
+				<td ng-show="rotationID >= 2">{{a.reviewer}}</td>
+				<td ng-show="rotationID >= 2">{{a.review_date}}</td>
 			</tr>
 		</tbody>
 	</table>
