--- a/app/views/library_album.html
+++ b/app/views/library_album.html
@@ -43,17 +43,19 @@
 				<th>Name</th>
 				<th>Artist</th>
 				<th>Airability</th>
+				<th></th>
 			</thead>
 
 			<tbody>
 				<tr ng-repeat="t in album.tracks" ng-class="{ 'text-success': t.airabilityID == 1, 'text-danger': t.airabilityID == 2, 'text-warning': t.airabilityID == 3 }">
 					<td>{{t.disc_num}}</td>
-					<td>
-						<a ng-href="{{t.file_name}}" target="_blank">{{t.track_num}}</a>
-					</td>
+					<td>{{t.track_num}}</td>
 					<td>{{t.track_name}}</td>
 					<td>{{t.artist_name}}</td>
 					<td>{{airability[t.airabilityID].airability}}</td>
+					<td class="text-center">
+						<span class="button-icon" ng-click="enqueueTrack(t, album)">&plus;</span>
+					</td>
 				</tr>
 			</tbody>
 		</table>
